--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -10,6 +10,11 @@ jobs:
   build-all:
     runs-on: ubuntu-latest
     steps:
+      # This is because if a PR is closed before a render finishes it won't find it. 
+      - name: Sleep for 5 minutes
+        run: sleep 300s
+        shell: bash
+
       - name: Delete branch
         uses: dawidd6/action-delete-branch@v3
         with:
