--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -94,4 +94,4 @@ jobs:
         if: ${{ github.event_name == 'release' }}
         run: |
           docker tag jhudsl/course_template jhudsl/course_template:${{ steps.get_version.outputs.version }}
-          docker push jhudsl/course_template
+          docker push jhudsl/course_template:1.0
