--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -93,5 +93,5 @@ jobs:
       - name: Push Docker image if release
         if: ${{ github.event_name == 'release' }}
         run: |
-          docker tag ${{ steps.get_version.outputs.version }}
-          docker push jhudsl/course_template
+          docker tag jhudsl/course_template jhudsl/course_template:${{ steps.get_version.outputs.version }}
+          docker push jhudsl/course_template:1.0
