Add more clear sync add instructions

--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -46,6 +46,14 @@ jobs:
           content-filepath: .github/automatic-issues/git-secrets.md
           labels: automated training issue
 
+      # Issue for how to enroll repo for updates
+      - name: New Course - Template Update Enrollment
+        uses: peter-evans/create-issue-from-file@v2.3.2
+        with:
+          title: New Course - Template Update Enrollment
+          content-filepath: .github/automatic-issues/update-enrollment.md
+          labels: automated training issue
+
 ##### Delete Template-specific files that aren't needed for new courses
 
       # Cleanup Template-specific bits
