--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -36,6 +36,8 @@ group:
       dest: .github/ISSUE_TEMPLATE/
     - source: scripts/
       dest: scripts/
+    - source: code_of_conduct.md
+      dest: code_of_conduct.md
 
 ###### TO ADD NEW REPOSITORY USE THIS FORMAT; Feel free to add/drop files that
 # you specifically would like synced (or not).
