--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -49,7 +49,7 @@ jobs:
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/course_template \
-          Rscript -e "rmarkdown::render("index.Rmd", output_format = "word_document")"
+          Rscript -e "rmarkdown::render("02-chapter_of_course.Rmd", output_format = "word_document")"
 ##### End of docx rendering section ########################################
 
       # Commit the rendered bookdown files
