Add back in docx chunk to render bookdown workflow

--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -86,6 +86,16 @@ jobs:
 
 ##### End of Coursera rendering section ########################################
 
+##### If you do not wish to render a docx, you can delete this section #####
+      # Run docx version
+      - name: Run docx version of render
+        run: |
+          docker run \
+          --mount type=bind,target=/home/rstudio,source=$PWD \
+          jhudsl/course_template \
+          Rscript -e "rmarkdown::render('02-chapter_of_course.Rmd', output_format = 'word_document')"
+##### End of docx rendering section ########################################
+
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files
         run: |
