--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  issues: write
+  
 jobs:
   # This workflow contains a single job called "build-all"
   build-all:
