--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -17,7 +17,7 @@ group:
     jhudsl/Cancer_Genome_Informatics
     jhudsl/Cancer-Imaging-Informatics
     jhudsl/GDSCN_Book_SARS_Galaxy_on_AnVIL
-    #ADD NEW REPO HERE following the format above#
+###ADD NEW REPO HERE following the format above#
   files:
     - source: .github/workflows/render-bookdown.yml
       dest: .github/workflows/render-bookdown.yml
