--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -9,7 +9,8 @@ on:
 
 permissions:
   issues: write
-  
+  pull-requests: write
+
 jobs:
   # This workflow contains a single job called "build-all"
   build-all:
