--- a/.github/workflows/downstream-mechanics-updates.yml
+++ b/.github/workflows/downstream-mechanics-updates.yml
@@ -3,6 +3,11 @@
 name: Sync Files
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to use?'
+        required: true
+        default: 'null'
   release:
     - published
 
@@ -14,12 +19,20 @@ jobs:
         uses: actions/checkout@master
 
       - name: Get the version
-        id: get_version
+        id: get_tag
         run: |
-          echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
+          if [ github.event.inputs.tag == 'null' ]
+          then
+            echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
+          fi
+          if [ github.event.inputs.tag != 'null' ]
+          then
+            echo ::set-output name=version::${{ github.event.inputs.tag }}
+          fi
+
 
       - name: Run Mechanics File Sync
         uses: BetaHuhn/repo-file-sync-action@v1.15.0
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
-          COMMIT_BODY: release-${{ steps.get_version.outputs.version }}
+          COMMIT_BODY: release-${{ steps.get_tag.outputs.version }}
