--- a/.github/workflows/downstream-mechanics-updates.yml
+++ b/.github/workflows/downstream-mechanics-updates.yml
@@ -2,14 +2,15 @@
 
 name: Sync Files
 on:
+  release:
+    types:
+    - published
   workflow_dispatch:
     inputs:
-      tag:
+      pr_tag:
         description: 'Tag to use?'
         required: true
         default: 'null'
-  release:
-    - published
 
 jobs:
   sync:
@@ -21,13 +22,13 @@ jobs:
       - name: Get the version
         id: get_tag
         run: |
-          if [ github.event.inputs.tag == 'null' ]
+          if [ github.event.inputs.pr_tag == 'null' ]
           then
             echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
           fi
-          if [ github.event.inputs.tag != 'null' ]
+          if [ github.event.inputs.pr_tag != 'null' ]
           then
-            echo ::set-output name=version::${{ github.event.inputs.tag }}
+            echo ::set-output name=version::${{ github.event.inputs.pr_tag }}
           fi
 
 
