--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -21,6 +21,8 @@ group:
   files:
     - source: .github/workflows/render-bookdown.yml
       dest: .github/workflows/render-bookdown.yml
+    - source: .github/workflows/render-preview.yml
+      dest: .github/workflows/render-preview.yml
     - source: .github/workflows/docker-build-test.yml
       dest: .github/workflows/docker-build-test.yml
     - source: .github/workflows/transfer-rendered-files.yml
@@ -33,10 +35,14 @@ group:
       dest: .github/workflows/release-notes.yml
     - source: .github/workflows/delete-preview.yml
       dest: .github/workflows/delete-preview.yml
-    - source: .github/ISSUE_TEMPLATE/
-      dest: .github/ISSUE_TEMPLATE/
-    - source: scripts/
-      dest: scripts/
+    - source: .github/ISSUE_TEMPLATE/course-problem-report.md
+      dest: .github/ISSUE_TEMPLATE/course-problem-report.md
+    - source: .github/ISSUE_TEMPLATE/course-content-add.md
+      dest: .github/ISSUE_TEMPLATE/course-content-add.md
+    - source: scripts/spell-check.R
+      dest: scripts/spell-check.R
+    - source: scripts/git_repo_check.R
+      dest: scripts/git_repo_check.R
     - source: code_of_conduct.md
       dest: code_of_conduct.md
 
