--- a/.github/workflows/downstream-mechanics-updates.yml
+++ b/.github/workflows/downstream-mechanics-updates.yml
@@ -34,7 +34,7 @@ jobs:
 
 
       - name: Run Mechanics File Sync
-        uses: BetaHuhn/repo-file-sync-action@v1.7.1
+        uses: BetaHuhn/repo-file-sync-action@vv1.8.0
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
           COMMIT_BODY: release-${{ steps.get_tag.outputs.version }}
