--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -7,9 +7,7 @@ on:
   pull_request:
     branches: [ main ]
 
-permissions:
-  issues: write
-  pull-requests: write
+permissions: read-all|write-all
 
 jobs:
   # This workflow contains a single job called "build-all"
