--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [ main ]
 
-permissions: read-all|write-all
+permissions: write-all
 
 jobs:
   # This workflow contains a single job called "build-all"
