--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Build components of the comment
         id: build-components
         run: |
-          course_name=$(head -n 1 _bookdown.yml | cut -d'"' -f 2)
+          course_name=$(head -n 1 _bookdown.yml | cut -d'"' -f 2| tr " " "-")
           bookdown_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/index.html")
           coursera_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/coursera/index.html")
           docx_link=$(echo "https://github.com/$GITHUB_REPOSITORY/raw/preview-${{ github.event.pull_request.number }}/docs/$course_name.docx")
