Add files to cleanup upon starting new course

--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -65,7 +65,18 @@ jobs:
             .github/sync.yml \
             .github/workflows/starting-course.yml \
             .github/ISSUE_TEMPLATE/course-template-problem-report.md \
-            .github/ISSUE_TEMPLATE/course-template-feature-request.md
+            .github/ISSUE_TEMPLATE/course-template-feature-request.md \
+            resources/code_output \
+            resources/screenshots \
+            resources/course_screenshots \
+            resources/gs_slides \
+            resources/image_to_slide_key.tsv \
+            resources/images/02-chapter_of_course_files \
+            resources/images/03-test_cases_files \
+            resources/images/04-figures_files \
+            Course_Name.rds \
+            docs/*.html \
+            docs/*.md
 
       # Commit modified files
       - name: Commit deleted files
