--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -54,6 +54,22 @@ jobs:
           content-filepath: .github/automatic-issues/update-enrollment.md
           labels: automated training issue
 
+      # Issue for adding a method of feedback
+      - name: Reminder - Add a method of user feedback
+        uses: peter-evans/create-issue-from-file@v2.3.2
+        with:
+          title: Reminder - Add user feedback method
+          content-filepath: .github/automatic-issues/add-feedback-method.md
+          labels: automated training issue
+
+      # Issue for adding the course to the jhudsl library
+      - name: Reminder - Add to jhudsl library
+        uses: peter-evans/create-issue-from-file@v2.3.2
+        with:
+          title: Reminder - Add to jhudsl library
+          content-filepath: .github/automatic-issues/add-to-library.md
+          labels: automated training issue
+
 ##### Delete Template-specific files that aren't needed for new courses
 
       # Cleanup Template-specific bits
