Delete docs in GHA before rendering

--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -67,6 +67,10 @@ jobs:
 
 ###### END OF DOCKER UPDATE CHUNK ##############################################
 
+      # We want a fresh run of the renders each time
+      - name: Delete old docs/*
+        run: rm -r docs/*
+
       # Run bookdown rendering
       - name: Run bookdown render
         run: |
