--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -73,6 +73,7 @@ jobs:
 
       # Run bookdown rendering
       - name: Run bookdown render
+        id: bookdown
         run: |
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
@@ -82,6 +83,7 @@ jobs:
 ##### If you do not wish to host your course on Coursera, you can delete this section #####
       # Run Coursera version
       - name: Run Coursera version of render
+        id: coursera
         run: |
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
@@ -89,6 +91,12 @@ jobs:
           Rscript -e "leanbuild::render_coursera()"
 
 ##### End of Coursera rendering section ########################################
+
+      # This checks on the steps before it and makes sure that they completed.
+      # If the renders didn't complete we don't want to commit the file changes
+      - name: Check on render steps
+        if: steps.bookdown.outcome != 'success' || steps.coursera.outcome != 'success'
+        run: exit 1
 
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files
