--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -26,7 +26,7 @@ jobs:
       # We want a fresh run of the renders each time
       - name: Delete old docs/*
         run: rm -r docs/*
-        
+
       # Run bookdown rendering
       - name: Run bookdown render
         run: |
@@ -46,6 +46,12 @@ jobs:
 
 ##### End of Coursera rendering section ########################################
 
+      # This checks on the steps before it and makes sure that they completed.
+      # If the renders didn't complete we don't want to commit the file changes
+      - name: Check on render steps
+        if: steps.bookdown.outcome != 'success' || steps.coursera.outcome != 'success'
+        run: exit 1
+        
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files to development branch
         run: |
