--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -90,7 +90,7 @@ jobs:
           echo steps.commit.outputs.changes
 
       - name: Create or update comment
-        if: ${{steps.commit.outputs.changes -gt 0 }}
+        if: ${{steps.commit.outputs.changes == 0 }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
@@ -105,7 +105,7 @@ jobs:
           edit-mode: replace
 
       - name: No comment if no changes
-        if: ${{steps.commit.outputs.changes -lt 1 }}
+        if: ${{steps.commit.outputs.changes == 1 }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
