--- a/.github/workflows/test-send-updates.yml
+++ b/.github/workflows/test-send-updates.yml
@@ -4,8 +4,7 @@ name: Test Sync Files
 
 on:
   release:
-    types:
-      - [prereleased, published]
+    types: [prereleased, published]
   workflow_dispatch:
     inputs:
       prtag:
