--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -47,6 +47,8 @@ group:
       dest: scripts/git_repo_check.R
     - source: code_of_conduct.md
       dest: code_of_conduct.md
+    - source: style-sets
+      dest: style-sets
 
 ###### TO ADD NEW REPOSITORY USE THIS FORMAT; Feel free to add/drop files that
 # you specifically would like synced (or not).
