--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -64,11 +64,17 @@ jobs:
           git checkout -b "preview-${{ github.event.pull_request.number }}"
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          echo ::set-output name=changes::$(git diff --name-only main -- docs)
+          changes=$(git diff --name-only main -- docs)
           git add -A
           git commit -m 'Render bookdown preview' || echo "No changes to commit"
           git push --force origin "preview-${{ github.event.pull_request.number }}" || echo "No changes to push"
 
+          if [[ -n $changes ]]; then
+            echo ::set-output name=changes::$(echo "no_changes")
+          elfi
+            echo ::set-output name=changes::$(echo "changes")
+          fi
+          
       - name: Find Comment
         uses: peter-evans/find-comment@v1
         id: fc
@@ -92,7 +98,7 @@ jobs:
           echo ${{steps.commit.outputs.changes}}
 
       - name: Create or update comment
-        if: [[! -n steps.commit.outputs.changes]]
+        if: steps.commit.outputs.changes == "changes"
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
@@ -107,7 +113,7 @@ jobs:
           edit-mode: replace
 
       - name: No comment if no changes
-        if: [[-n steps.commit.outputs.changes]]
+        if: steps.commit.outputs.changes == "no_changes"
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
