--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -64,7 +64,7 @@ jobs:
           git checkout -b "preview-${{ github.event.pull_request.number }}"
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          changes=$(git diff --name-only main -- docs)
+          changes=$(git diff --name-only origin/main -- docs)
           git add -A
           git commit -m 'Render bookdown preview' || echo "No changes to commit"
           git push --force origin "preview-${{ github.event.pull_request.number }}" || echo "No changes to push"
