--- a/.github/test-sync.yml
+++ b/.github/test-sync.yml
@@ -4,7 +4,7 @@
 group:
   # Repositories to recieve changes
   repos: |
-    https://github.com/jhudsl/DaSL_Template_Sync_Test
+    jhudsl/DaSL_Template_Sync_Test
 
 ###ADD NEW REPO HERE following the format above#
   files:
@@ -36,7 +36,7 @@ group:
       dest: code_of_conduct.md
     - source: style-sets
       dest: style-sets
-      
+
 ###### TO ADD NEW REPOSITORY USE THIS FORMAT; Feel free to add/drop files that
 # you specifically would like synced (or not).
 #
