--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: the latest commit
+          body-includes: latest commit
 
       - name: Build components of the comment
         id: build-components
