--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -25,7 +25,8 @@ jobs:
 
       # We want a fresh run of the renders each time
       - name: Delete old docs/*
-        run: rm -r docs/*
+        run: |
+          rm -r docs/*
 
       # Run bookdown rendering
       - name: Run bookdown render
@@ -35,6 +36,7 @@ jobs:
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/course_template \
           Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all')"
+          cp -R assets/* docs/assets/ 
 
 ##### If you do not wish to host your course on Coursera, you can delete this section #####
       # Run Coursera version
