Revert "Use install_bioc.r script"
This reverts commit 1f3c449381cd2fd84ec2e574cc39e6562d17fb7f.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,6 @@ LABEL maintainer="cansav09@gmail.com"
 WORKDIR /rocker-build/
 
 COPY install_github.R .
-COPY install_bioc.r .
 
 # Install apt-getable packages to start
 RUN apt-get update && apt-get install -y --no-install-recommends apt-utils dialog
@@ -37,21 +36,21 @@ RUN apt-get -y --no-install-recommends install \
     python3-pip  python3-dev
 
 # Commonly used R packages
-RUN ./install_bioc.r \
-    bookdown \
-    gitcreds \
-    here \
-    leanpubr \
-    optparse \
-    oro.nifti \
-    qpdf \
-    R.utils \
-    rprojroot \
-    rgoogleslides \
-    servr \
-    spelling \
-    styler \
-    reticulate
+RUN Rscript -e  "install.packages( \
+    c('bookdown', \
+      'here', \
+      'leanpubr', \
+      'optparse', \
+      'oro.nifti', \
+      'qpdf', \
+      'R.utils', \
+      'rprojroot', \
+      'rgoogleslides', \
+      'servr', \
+      'spelling', \
+      'styler', \
+      'reticulate', \
+      'gitcreds'))"
 
 # Copy over git token and package list
 COPY git_token.txt .
