--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -49,12 +49,14 @@ RUN Rscript -e  "install.packages( \
       'servr', \
       'spelling', \
       'styler', \
-      'reticulate', \
-      'gitcreds'))"
+      'reticulate'))"
 
 # Copy over git token and package list
 COPY git_token.txt .
 COPY github_package_list.tsv .
+
+# cow needs this dependency:
+RUN Rscript -e  "devtools::install_version('gitcreds', version = '0.1.1', repos = 'http://cran.us.r-project.org')"
 
 # Didactr needs this dependency:
 RUN Rscript -e  "devtools::install_version('lifecycle', version = '1.0.0', repos = 'http://cran.us.r-project.org')"
