--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -50,7 +50,7 @@ jobs:
         if: ${{ steps.spell_check_run.outputs.sp_chk_results > 3 }}
         id: build-components
         run: |
-          spell_check_url=$(Rscript --vanilla get_spell_errors.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
+          spell_check_url=$(Rscript --vanilla scripts/get_spell_errors.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
           echo ::set-output name=time::$(date +'%Y-%m-%d')
           echo ::set-output name=commit_id::$GITHUB_SHA
           echo ::set-output name=sp_error_url::$spell_check_url
@@ -75,7 +75,7 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             :warning: There are spelling errors that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Spell-check).
-              
+
             _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
 
